# MATH4025-Minecraft-Project

./: .gitignore  Makefile  README.md  main.py  plot_rewards.py  pyproject.toml  requirements.txt  test_mc.py  unpickle.py
artifacts/: dqn_model.pt  q_learning_rewards.json  q_table.pkl  reward_log.txt
artifacts/sac_final/: data  ent_coef_optimizer.pth  pytorch_variables.pth  system_info.txt
basalt_utils/src/basalt_utils.egg-info/: PKG-INFO  SOURCES.txt
environment/: restricted_wrapper.py  simple_environment.py  wood_environment.py  world_2.py
environment/worlds/: zip_world.py
environment/worlds/getwood/: level.dat_old
environment/worlds/getwood/advancements/: 84505711-6f7c-4732-a912-44c06f2a3002.json
environment/worlds/getwood/poi/: r.-1.-1.mca  r.-2.-1.mca
environment/worlds/getwood/region/: r.-1.-2.mca  r.-1.0.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.0.-2.mca  r.0.0.mca
environment/worlds/getwood/stats/: 84505711-6f7c-4732-a912-44c06f2a3002.json
environment/worlds/simple/: level.dat_old
environment/worlds/simple/advancements/: 84505711-6f7c-4732-a912-44c06f2a3002.json
environment/worlds/simple/region/: r.-1.0.mca  (+4 more)
model/: environment.py  main.py  model.py  ppo.py  run_model.py  test_vision_integration.py  train_ppo.py  vision_model.py
model/deep-q-learning/: README.md  dqn.py  replay_buffer.py  train.py
model/deep_q_learning/: dqn.py  eval.py  train.py  wrappers.py
model/deep_q_learning/reward_wrappers/: distance_wrapper.py  east_wrapper.py
model/q-learning/: main.py
model/sac/: PLAN.md  environment.py  evaluate.py  model.py  run.py
(+2 files in other folders)
