[project]
name = "math4025-minecraft-project"
version = "0.1.1"
description = ""
authors = [
    {name = "adescoteaux1",email = "ally.descoteaux.0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
